# NusaBench

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: ci.yml  deploy.yml
.sisyphus/evidence/: task-8-hf-model-tests.txt
.sisyphus/notepads/nusabench/: learnings.md
contributing/: index.html
docs/: contributing.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: api.md  cli.md  models.md  tasks.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/api/: index.html
guide/cli/: index.html
guide/models/: index.html
guide/tasks/: index.html
leaderboard/: data.json  index.html
leaderboard/leaderboard/: script.js  styles.css
search/: search_index.json
src/nusabench/: __init__.py  cli.py  evaluator.py  results.py
src/nusabench/metrics/: __init__.py  accuracy.py  base.py  bleu.py  chrf.py  exact_match.py  f1.py  rouge.py
src/nusabench/models/: __init__.py  base.py  dummy.py  gemini.py  huggingface.py
src/nusabench/reporting/: __init__.py  console.py  json_export.py  markdown_export.py
src/nusabench/tasks/: __init__.py  base.py  loader.py  mmlu_utils.py  ner_utils.py
src/nusabench/tasks/configs/: cultural_indommu.yaml  mt_nusax.yaml  ner_nergrit.yaml  nli_wrete.yaml  qa_facqa.yaml  sentiment_smsa.yaml  summarization_indosum.yaml  toxicity_id.yaml
src/nusabench/utils/: __init__.py  config.py  data.py  logging.py
tests/: conftest.py  test_cli.py  test_evaluator.py  test_gemini_model.py  test_hf_model.py  test_metrics.py  test_models.py  test_reporting.py  test_tasks.py  test_tasks_mt.py  test_tasks_ner.py  test_tasks_nli.py  test_tasks_qa.py  test_tasks_sentiment.py  test_tasks_summarization.py  test_tasks_toxicity.py  test_utils.py
tests/fixtures/: dummy_task.yaml
tests/integration/: test_hf_tiny.py  test_pipeline.py
