[project]
name = "nusabench"
version = "0.1.0"
description = "NusaBench: NLP Evaluation Suite for Bahasa Indonesia"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
  "datasets>=2.14",
  "evaluate>=0.4",
  "typer>=0.9",
  "rich>=13.0",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
hf = ["transformers>=4.35", "torch>=2.0", "accelerate>=0.26"]
gemini = ["google-generativeai>=0.5"]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.5", "pre-commit>=3.0", "types-PyYAML>=6.0"]
docs = ["mkdocs-material>=9.5"]
all = [
  "transformers>=4.35",
  "torch>=2.0",
  "accelerate>=0.26",
  "google-generativeai>=0.5",
  "pytest>=7.0",
  "ruff>=0.1",
  "mypy>=1.5",
  "pre-commit>=3.0",
  "types-PyYAML>=6.0",
  "mkdocs-material>=9.5",
]

[project.scripts]
nusabench = "nusabench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nusabench"]
