[project]
name = "nusabench"
version = "0.1.0"
description = "NusaBench: NLP Evaluation Suite for Bahasa Indonesia"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["nlp", "evaluation", "benchmark", "indonesian", "bahasa", "llm"]

dependencies = [
  "datasets>=2.14",
  "evaluate>=0.4",
  "sacrebleu>=2.3",
  "rouge-score>=0.1.2",
  "seqeval>=1.2",
  "typer>=0.9",
  "rich>=13.0",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
hf = ["transformers>=4.35", "torch>=2.0", "accelerate>=0.26"]
gemini = ["google-generativeai>=0.5"]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.5", "pre-commit>=3.0", "types-PyYAML>=6.0"]
docs = ["mkdocs-material>=9.5"]
all = [
  "transformers>=4.35",
  "torch>=2.0",
  "accelerate>=0.26",
  "google-generativeai>=0.5",
  "sacrebleu>=2.3",
  "rouge-score>=0.1.2",
  "seqeval>=1.2",
  "pytest>=7.0",
  "ruff>=0.1",
  "mypy>=1.5",
  "pre-commit>=3.0",
  "types-PyYAML>=6.0",
  "mkdocs-material>=9.5",
]

[project.scripts]
nusabench = "nusabench.cli:app"

[project.urls]
Homepage = "https://github.com/vaskoyudha/NusaBench"
Documentation = "https://vaskoyudha.github.io/NusaBench/"
Repository = "https://github.com/vaskoyudha/NusaBench"
Issues = "https://github.com/vaskoyudha/NusaBench/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nusabench"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
